<resources>
    <string name="app_name">Another-Github-App</string>

    <!-- Strings related to login -->
    <string name="prompt_domain">Domain</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="sample_domain">api.github.com</string>
    <string name="sample_user">blabladuck</string>
    <string name="sample_password">Password@1986</string>

</resources>
